Fixed lots of issues
- Added new way to run from source in macOS
- Played around more with star shaders
- Fixed focus alpha,delta,pmra,pmdec with particle groups